--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "nodemon dist/index.js",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "unify": "prettier --write ./src"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "argon2": "^0.30.2",
     "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
@@ -40,6 +42,7 @@
     "@types/uuid": "^9.0.0",
     "gen-env-types": "^1.3.4",
     "nodemon": "^2.0.20",
+    "prettier": "^2.8.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
